--- a/csharpbeadando2024-nyiridaniel-aughmi/csharpbeadando2024-nyiridaniel-aughmi.csproj
+++ b/csharpbeadando2024-nyiridaniel-aughmi/csharpbeadando2024-nyiridaniel-aughmi.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>csharpbeadando2024_nyiridaniel_aughmi</RootNamespace>
     <AssemblyName>csharpbeadando2024-nyiridaniel-aughmi</AssemblyName>
-    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
