CustomDictionary created; where generic type constraint added; User.cs uses CustomDictionary now; Purchase sound added

--- a/csharpbeadando2024-nyiridaniel-aughmi/csharpbeadando2024-nyiridaniel-aughmi.csproj
+++ b/csharpbeadando2024-nyiridaniel-aughmi/csharpbeadando2024-nyiridaniel-aughmi.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin.cs" />
+    <Compile Include="CustomDictionary.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Login.cs" />
